# legal-agent-workflow

./: .gitignore  Makefile  README.md  agent-graph.mmd  contract-register-2025.md  decision-framework.md  models.py  requirements.md
agent/: .env.example  README.md  pyproject.toml
agent/contract_triage/: __init__.py  __main__.py  agents.py  api.py  data.py  db.py  devui_app.py  executors.py  graph_spec.py  heuristics.py  models.py  pdf.py  service.py  state.py  storage.py  workflow.py
agent/tests/: README.md  conftest.py  helpers.py  test_ingest.py  test_service.py
app/agent/: .env.example  README.md  pyproject.toml
app/frontend/: README.md  package-lock.json  tailwind.config.ts
app/scripts/: dev.sh  make_sample_contract.py
apphost/: apphost.mts  aspire.config.json  tsconfig.apphost.json
contracts/CR-2025-001/: metadata.json
contracts/CR-2025-002/: metadata.json
contracts/CR-2025-003/: edit-log.json  metadata.json
data/: contract-inbox.md  contract-register-2026.md
data/evals/: README.md
docs/: agent-graph.mmd  decision-framework-explained.md  decision-framework.mmd
e2e/: .gitignore  Contract-Triage-E2E-Testing-Guide.docx  docker-compose.langfuse.yml  package-lock.json  package.json  playwright.config.ts  run-api.sh  run-frontend.sh  stack.env
frontend/: .env.example  package.json  tailwind.config.ts  tsconfig.json
host/: .gitignore  apphost.mts  package-lock.json  package.json
policies/: PLAYBOOK.json  POL-FIN-007.json  POL-HR-003.json  POL-LGL-002.json  POL-PRIV-001.json  POL-SEC-011.json  index.json
scripts/: dev.sh
test/: README.md
(+303 files in other folders)
